Fixed search bar spacing

--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@
 
 body{
     font-family: arial, sans-serif;
-    display: block;
+    margin: 0;
 }
 
 header{
@@ -177,9 +177,9 @@ header{
 }
 
 main{
-    display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 180px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -189,6 +189,7 @@ main{
 footer{
     background-color: rgb(242, 242, 242);
     position: absolute;
+    height: auto;
     bottom: 0px;
     right: 0px;
     left: 0px;
